[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpparser"
dynamic = ["version"]
description = "Parse wordpress export files into a well formatted python dictionary"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Martin Sandström", email = "martin@marteinn.se" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "phpserialize>=1.3",
]

[project.urls]
Homepage = "https://github.com/marteinn/wpparser"

[tool.setuptools.dynamic]
version = { attr = "wpparser.__version__" }

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-third-party = ["phpserialize"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true

no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["phpserialize"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false